--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<div>
+    <h1>RENEW</h1>
+    <p>Resources Engagin Neighborhoods for Women</p>
+</div>
 <head>
     <script src="https://unpkg.com/d3@5.15.0/dist/d3.min.js"></script>
     <link rel="stylesheet" href="main.css">
