--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div>
+<!--     <div>
         <h1></h1>
         <p>Resources Engaging Neighborhoods for Womxn</p>
+    </div> -->
+    <div align="center">
+        <img src="renew.png" alt="RENEW">
     </div>
     <script src="main.js"></script>
     
